--- a/_sass/components/modules/_clients.scss
+++ b/_sass/components/modules/_clients.scss
@@ -5,6 +5,7 @@
 .clients {
   list-style-type: none;
   padding: 0;
+  @include margin($base-line-height);
 
   @include respond-to($breakpoint-medium, max) {
     text-align: left;
