Add images to newest posts

--- a/_sass/common/_elements.scss
+++ b/_sass/common/_elements.scss
@@ -439,7 +439,18 @@ svg {
 /* ==========================================================================
    @group Figures
    ========================================================================== */
+figure {
+  margin: 0; // Override
+}
 
+figcaption {
+  margin-top: 0; // Override
+  
+  /*p*/.figcaption {
+    background: $color-background;
+    padding: .7rem;
+  }
+}
 
 /* ==========================================================================
    @group Forms - see Forms module!
