--- a/_includes/navigation-places.html
+++ b/_includes/navigation-places.html
@@ -1,5 +1,5 @@
 <nav role="navigation" aria-labelledby="places-nav">
-  <h2 id="places-nav">Other parts in this series of places where I've lived</h2>
+  <h2 id="places-nav">Other parts in this series: Places Where I've Lived</h2>
   <ol>
     {% for item in site.data.navigation-places %}
     <li>
