--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -4,7 +4,7 @@
 
     <div class="faq">
       <h3 class="section-heading is-hidden">Quick facts</h3>
-      <p class="h-card vcard"><span class="lead">Hi! I’m <span class="p-name fn">Aki<span class="is-visuallyhidden">&nbsp;Kärkkäinen</span></span> — </span> a consulting <a href="https://www.scrum.org/user/405331" class="p-role role">Scrum Master</a> and former UI Developer helping teams create better <a href="/work/">digital services</a>. I currently live in <span class="p-adr adr"><span class="p-locality locality">Malmö</span>, <span class="p-country-name country-name">Sweden</span></span>.</p>
+      <p class="h-card vcard"><span class="lead">Hi! I’m <span class="p-name fn">Aki<span class="is-visuallyhidden">&nbsp;Kärkkäinen</span></span> — </span> a consulting <a href="https://www.scrum.org/user/405331" class="p-role role">Scrum Master</a> and agile practitioner helping teams create better <a href="/work/">digital services</a>. I currently live in <span class="p-adr adr"><span class="p-locality locality">Malmö</span>, <span class="p-country-name country-name">Sweden</span></span>.</p>
     </div>
 
     <div class="l-actions l-center-align">
