--- a/_sass/common/_elements.scss
+++ b/_sass/common/_elements.scss
@@ -189,14 +189,12 @@ h1,
   padding: 0;
   font-weight: $font-weight-bold;
   @include respond-to($breakpoint-medium) {
-    @include size-and-leading(60, $base-line-height * 2.5);
-    @include margin(0, $base-line-height * 2);
+    @include size-and-leading(48, $base-line-height * 2);
   }
 
-  // Single article
-  &.p-name {
-    @include padding(0, 0);
-    @include margin(0, 0);
+  // With date and categories
+  &.entry-title--withmeta {
+    @include margin($base-line-height / 2, $base-line-height / 2);
   }
 }
 
