--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -61,6 +61,11 @@
   text-indent: 200%;
   white-space: nowrap;
   visibility: visible;
+
+  &:hover, 
+  &:focus {
+    border-bottom: none;
+  }
 }
 
 .read-more {
