Adapt styling for posts navigation

--- a/_includes/categories-in-single.html
+++ b/_includes/categories-in-single.html
@@ -1,5 +1,5 @@
 <span class="categories__text is-visuallyhidden">Filed under: </span>
-<ul class="nav-log nav-log--categories">
+<ul class="nav-log nav-log--categories nav-log--categories-single">
   {% for category in page.categories %}
   <li><a href="/log/category/{{category|downcase}}/" rel="category tag">{{category}}</a></li>
   {% endfor %}
