--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -7,17 +7,27 @@ layout: default
   <div class="l-heading">
     <div class="l-constrained">
       {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
-      {% include post-meta-in-single.html time=page.date %}
-      <h1 class="p-name entry-title entry-title--withmeta">{{page.title}}</h1>
+        <div class="l-nav-single">
+          <div class="l-nav-single__meta">
+            {% include post-meta-in-single.html time=page.date %}
+          </div>
+          <div class="l-nav-single__prevnext">
+            {% include navigation-log.html %}
+          </div>
+        </div>
+
+        <h1 class="p-name entry-title entry-title--withmeta">{{page.title}}</h1>
       {% else %}
-      <h1 class="p-name entry-title">{{page.title}}</h1>
+        <h1 class="p-name entry-title">{{page.title}}</h1>
       {% endif %}
     </div>
   </div>
 
   <div class="e-content e-content--single entry-content l-constrained">
     {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
+
     {% include categories-in-single.html %}
+
     <div class="l-row">
       <div class="l-cell {% if page.url != '/work/' %}l-cell-8{% endif %}">
         {{content}}
@@ -28,9 +38,3 @@ layout: default
     {% endif %}
   </div>
 </article>
-
-{% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
-<div class="l-constrained">
-  {% include navigation-log.html %}
-</div>
-{% endif %}
