--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -26,13 +26,16 @@ layout: default
   <div class="e-content e-content--single entry-content l-constrained">
     {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
 
-    {% include categories-in-single.html %}
+      {% include categories-in-single.html %}
 
-    <div class="l-row">
-      <div class="l-cell {% if page.url != '/work/' %}l-cell-8{% endif %}">
-        {{content}}
+      <div class="l-row">
+        <div class="l-cell {% if page.url != '/work/' %}l-cell-8{% endif %}">
+          {{content}}
+        </div>
       </div>
-    </div>
+
+      {% include navigation-log.html %}
+
     {% else %}
     {{content}}
     {% endif %}
