Fix link state style for clients

--- a/_sass/components/modules/_clients.scss
+++ b/_sass/components/modules/_clients.scss
@@ -32,7 +32,12 @@
 
     &--svenskateatern {
       background: $color-text-dark;
-    }      
+    }
+
+    &:focus, 
+    &:hover {
+      border: none;
+    }
   }
 
   &__logo {
