--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -64,7 +64,7 @@
       transition: transform $transition-duration linear;
 
       &--cert {
-        margin: 10px 0 0 6px;
+        margin: $gutter 0 0 $gutter;
       }
     }
 
