--- a/_includes/styleguide/sectioning-elements.html
+++ b/_includes/styleguide/sectioning-elements.html
@@ -1,11 +1,11 @@
 <!-- SECTIONING ELEMENTS -->
 
-<h1>Heading 1 title <a href="#">linked</a></h1>
-<h2>Heading 2 title <a href="#">linked</a></h2>
-<h3>Heading 3 title <a href="#">linked</a></h3>
-<h4>Heading 4 title <a href="#">linked</a></h4>
-<h5>Heading 5 title <a href="#">linked</a></h5>
-<h6>Heading 6 title <a href="#">linked</a></h6>
+<h1>A very long Heading 1 title that also has a <a href="#">link</a></h1>
+<h2>A very long Heading 2 title that also has a <a href="#">link</a></h2>
+<h3>A very long Heading 3 title that also has a <a href="#">link</a></h3>
+<h4>A very long Heading 4 title that also has a <a href="#">link</a></h4>
+<h5>A very long Heading 5 title that also has a <a href="#">link</a></h5>
+<h6>A very long Heading 6 title that also has a <a href="#">link</a></h6>
 
 <h2 class="section-heading">Section heading</h2>
 
