--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -30,6 +30,11 @@
     &:hover {
       background: $color-background;
       box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
+
+      .p-name__link {
+        color: rgba($color-text-dark, 1);
+      }
+
     }
   }
 }
@@ -111,17 +116,21 @@
     flex: 0 0 100%;
     display: flex;
     word-break: break-word;
+
   }
 
   @include respond-to($breakpoint-small) {
     &__item {
-      flex: 0 0 50%;
+      flex: 0 0 calc(50% - #{$gutter * 2});
+      border-bottom: 1px solid $color-border;
+      margin: 0 $gutter;
+      padding: $gutter 0;
     }
   }
 
   @include respond-to($breakpoint-medium) {
     &__item {
-      flex: 0 0 33.3333%;
+      flex: 0 0 calc(33.3333% - #{$gutter * 2});
     }
   }
 
