--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -106,9 +106,9 @@
   // Equal height items
   display: flex;
   flex-wrap: wrap;
-  margin: 0 -15px;
+  margin: 0 -15px relative-size($base-line-height);
   @include respond-to($breakpoint-large) {
-    margin: 0 -22px;
+    margin: 0 -22px relative-size($base-line-height);
   }
 
   // Custom responsive grid
@@ -116,7 +116,6 @@
     flex: 0 0 100%;
     display: flex;
     word-break: break-word;
-
   }
 
   @include respond-to($breakpoint-small) {
