--- a/_sass/components/modules/_nav-log.scss
+++ b/_sass/components/modules/_nav-log.scss
@@ -121,55 +121,52 @@
     display: inline-flex;
     justify-content: center; // horizontally
     align-items: center;     // vertically    
-    width: 35px;
-    height: 35px;
+    width: 50px;
+    height: 50px;
     border-radius: 100%;
-    border: 1px solid rgba($color-border, 0.5);
-    background-color: $color-background;
+    border: 1px solid transparent;
   }
 
   a#{$self}__prevlink:focus,
   a#{$self}__nextlink:focus,
   a#{$self}__prevlink:hover,
   a#{$self}__nextlink:hover {
-    border: 1px solid rgba($color-text-light, 0.2);
+    border: 1px solid transparent;
+    background-color: $color-background;
 
     &::before,
-    &::after {
-      border-color: rgba($color-text-light, 1);
-    } 
+    &::after {} 
   }
 
-  &__prev {
-    margin-right: 1rem;
-  }
+  &__prev {}
 
+  // Arrows
   &__prevlink::before, 
   &__nextlink::after {
     width: 10px;
     height: 10px;
-    border: 2px solid rgba($color-text-light, 0.5);
+    border: 2px solid rgba($color-text-light, 1);
     border-width: 0 2px 2px 0;
     content: '';
   }
 
-  // Left
+  // Left arrow
   &__prevlink::before {
     transform: rotate(135deg);
   }
 
-  // Right
+  // Right arrow
   &__nextlink::after {
     transform: rotate(-45deg);
   }
 
+  // Disabled arrows
   &__prevlink--disabled,
   &__nextlink--disabled {
-    border: 1px solid $color-border;
     
     &::before,
     &::after {
-      border-color: $color-border;
+      border-color: rgba($color-text-light, .3);
     }
   }
 }
