Add Medium social icon

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -74,6 +74,7 @@ $color-link-hover           : #2e8aca; // Old: #39c
 $color-link-active          : #39c;
 
 // Social
+$color-link-social-medium   : #12100e;
 $color-link-social-linkedin : #007bb6;
 $color-link-social-facebook : #3b5998;
 $color-link-social-github   : #171515;
