Add Mastodon social icon

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -81,6 +81,7 @@ $color-link-social-github   : #171515;
 $color-link-social-flickr   : #ff0084;
 $color-link-social-lastfm   : #c3000d;
 $color-link-social-twitter  : #00acee;
+$color-link-social-mastodon : #3088d4;
 $color-link-social-goodreads: #630;
 $color-link-social-instagram: #e4405f;
 $color-link-social-rss      : #ee802f;
