Add YouTube social channel

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -85,6 +85,7 @@ $color-link-social-mastodon : #3088d4;
 $color-link-social-goodreads: #630;
 $color-link-social-instagram: #e4405f;
 $color-link-social-rss      : #ee802f;
+$color-link-social-youtube  : #ff0000;
 
 
 // ========================================================================== //
