--- a/_sass/components/modules/_icons.scss
+++ b/_sass/components/modules/_icons.scss
@@ -4,9 +4,9 @@
   @font-face {
   font-family: 'icons';
   src:
-    url($font-base + '/icons.ttf?54mxn0') format('truetype'),
-    url($font-base + '/icons.woff?54mxn0') format('woff'),
-    url($font-base + '/icons.svg?54mxn0#icons') format('svg');
+    url($font-base + '/icons.ttf?gwj8nn') format('truetype'),
+    url($font-base + '/icons.woff?gwj8nn') format('woff'),
+    url($font-base + '/icons.svg?gwj8nn#icons') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -61,6 +61,10 @@
 .i-instagram:before {
   content: "\ea92";
 }
+.i-youtube:before {
+  content: "\ea9d";
+}
+
 
 /* 
  * Branding 
@@ -101,6 +105,9 @@
 }
 .i-instagram {
   color: $color-link-social-instagram;
+}
+.i-youtube {
+  color: $color-link-social-youtube;
 }
 
 .section-heading .i-share {
