--- a/_sass/mixins/_all.scss
+++ b/_sass/mixins/_all.scss
@@ -222,3 +222,17 @@ $selectionColor: #b4d5fe;
     }
   }
 }
+
+@mixin embed() {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  height: 0;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
