--- a/_includes/categories-in-collection.html
+++ b/_includes/categories-in-collection.html
@@ -1,7 +1,7 @@
 <nav aria-labelledby="category-nav-heading">
   <h2 class="section-heading is-visuallyhidden" id="category-nav-heading">Categories</h2>
   <ul class="nav-log nav-log--categories l-row">
-    <li class="cat-item cat-item--all {% if page.url == '/log/' %}current-cat{% endif %}"><a class="ga-nav-log" title="Show all articles" href="https://www.akikoo.org/log">All posts</a> <span class="count is-visuallyhidden">{{site.posts|size}} posts in total</span></li>
+    <li class="cat-item cat-item--all {% if page.url == '/log/' %}current-cat{% endif %}"><a class="ga-nav-log" title="Show all articles" href="/log/">All posts</a> <span class="count is-visuallyhidden">{{site.posts|size}} posts in total</span></li>
     {% assign categories = site.categories | sort %}
     {% for category in categories %}
     {% assign category_name = category[0] %}
