--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -20,16 +20,13 @@
       flex: 1 0 auto;
     }
 
-    transition: box-shadow $transition-duration linear, background $transition-duration linear;
-
+    transition: all $transition-duration linear;
+    text-decoration: solid underline transparent 1px;
     &:hover {
-      background: $color-background;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
-
       .p-name__link {
         color: rgba($color-text-dark, 1);
+        text-decoration: solid underline $color-text-dark 2px;
       }
-
     }
   }
 }
