Add new article on The Smile concert

--- a/_sass/mixins/_all.scss
+++ b/_sass/mixins/_all.scss
@@ -228,7 +228,7 @@ $selectionColor: #b4d5fe;
   padding-bottom: 56.25%; /* 16:9 */
   height: 0;
 
-  iframe {
+  iframe, video {
     position: absolute;
     top: 0;
     left: 0;
