--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -7,7 +7,7 @@
 // Article wrapper
 .h-entry {
   &--in-collection {
-    background: #fff;
+    background: $color-background;
     padding: $gutter;
     position: relative;
 
@@ -28,6 +28,7 @@
     transition: all $transition-duration linear;
     text-decoration: solid underline transparent 1px;
     &:hover {
+      background: $color-white;
       .p-name__link {
         color: rgba($color-text-dark, 1);
         text-decoration: solid underline $color-text-dark 2px;
