--- a/_sass/components/modules/_post-meta.scss
+++ b/_sass/components/modules/_post-meta.scss
@@ -3,12 +3,11 @@
    ========================================================================== */
 
 .entry-meta {
-  margin: 0;
+  margin: 0 $gutter 0;
   font-weight: $font-weight-regular;
 
   @include respond-to($breakpoint-medium) {
     @include size-and-leading(18);
-    margin: 0 $gutter 0;
   }
 
   &--single {
@@ -32,6 +31,7 @@
 
   @include respond-to($breakpoint-small) {
     @include margin(0, $base-line-height / 2.5);
+    border-bottom: 3px solid $color-white;
   }
 
   @include respond-to($breakpoint-medium) {
