--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -8,7 +8,8 @@
 .h-entry {
   &--in-collection {
     background: $color-background;
-    padding: $gutter;
+    padding: 0 0 $gutter;
+    margin: $gutter;
     position: relative;
 
     display: flex;
@@ -17,6 +18,7 @@
 
     @include respond-to($breakpoint-small) {
       padding: 0;
+      margin: 0;
     }
 
     .e-content {
@@ -111,13 +113,13 @@
     flex: 0 0 100%;
     display: flex;
     word-break: break-word;
-    margin: 0 0 $gutter;
+    margin: 0;
   }
 
   @include respond-to($breakpoint-small) {
     &__item {
       flex: 0 0 calc(50% - #{$gutter * 2});
-      margin: $gutter $gutter $gutter * 2;
+      margin: $gutter;
     }
   }
 
@@ -125,7 +127,7 @@
     &__item {
       flex: 0 0 calc(33.3333% - #{$gutter * 2});
       margin: 0 $gutter;
-      margin: $gutter/2 $gutter $gutter * 2;
+      margin: 0 $gutter $gutter * 2;
     }
   }
 
