--- a/_includes/categories-in-single.html
+++ b/_includes/categories-in-single.html
@@ -1,6 +1,7 @@
 <span class="categories__text is-visuallyhidden">Filed under: </span>
 <ul class="nav-log nav-log--categories nav-log--categories-single">
-  {% for category in page.categories %}
+  {% assign categories = page.categories | sort %}
+  {% for category in categories %}
   <li><a href="/log/category/{{category|downcase}}/" rel="category tag">{{category}}</a></li>
   {% endfor %}
 </ul>
