--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -20,7 +20,7 @@ layout: default
     {% if page.url == '/log/' or page.pagetype == 'category' %}
     <div class="l-row">
       <div class="l-cell l-cell-8">
-        <p class="text-intro">Short notes and articles I've written, and links to interesting pieces by others.</p>
+        <p class="text-intro">Short notes and articles I’ve written, and links to interesting pieces by others.</p>
       </div>
     </div>
     {% endif %}
